--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-<link rel="stylesheet" href="css/index.css">
-    </head>
+    <link rel="stylesheet" href="css/index.css">
+  </head>
 
 
-
+  <header>
     <h1></h1>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -18,3 +18,8 @@
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum."</p>
+  </header>
+  <footer>
+
+  </footer>
+</html>
