--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 
   <header>
+    <section class="header">
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+      </nav>
+    </section>
     <h1></h1>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
