--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       }
     </style>
   </head>
+  <!-- jQuery first, then Bootstrap JS. -->
+  <script
+    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script
+    src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   <body>
     <div class="container">
       <div class="row">
@@ -94,4 +99,9 @@
       <footer>
 
       </footer>
+      <script>
+	$('.carousel').carousel({
+		interval: 3000
+	})
+</script>
     </html>
