--- a/index.html
+++ b/index.html
@@ -34,92 +34,96 @@
   <script
     src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <br />
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <br />
 
-          <div id="carousel-example-generic" class="carousel slide"
-            data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0"
-                class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-            </ol>
+            <div id="carousel-example-generic" class="carousel slide"
+              data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0"
+                  class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+              </ol>
 
-            <div class="carousel-inner" role="listbox">
-              <div class="carousel-item active">
-                <img
-                  src="images/welcome sign disney.jpeg"
-                  alt="First Slide" />
-              </div>
-              <div class="carousel-caption">
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img
+                    src="images/welcome sign disney.jpeg"
+                    alt="First Slide" />
+                </div>
+                <div class="carousel-caption">
+
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/bluemicky.jpg"
+                    alt="Second Slide" />
+
+                  <div class="carousel-caption">
+                    <h2>Childcare Passes</h2>
+                    <p>Planning a date night (or even a date day!) at Disney
+                      World
+                      and need somebody to watch the kids? No worries; Disney
+                      has
+                      you covered. Swap for childcare passes. </p>
+                  </div>
+                </div>
+
+
+                <div class="carousel-item">
+                  <img
+                    src="images/bluebackground.jpg"
+                    alt="Third Slide" />
+                  <div class="carousel-caption">
+                    <h2>Stroller Passes</h2>
+                    <p>Want to make family memories? When having that much fun
+                      is
+                      just exhausting! SO, why not swap for stroller passes.
+                    </p>
+                  </div>
+                </div>
               </div>
               <div class="carousel-item">
                 <img
-                  src="images/themepark.jpeg"
-                  alt="Second Slide" />
-
-                <div class="carousel-caption">
-                  <h2>Childcare Passes</h2>
-                  <p>Planning a date night (or even a date day!) at Disney World
-                    and need somebody to watch the kids? No worries; Disney has
-                    you covered. Swap for childcare passes. </p>
-                </div>
+                  src="images/nighttimecastle.jpg"
+                  alt="Fouth Slide" />
               </div>
-
               <div class="carousel-item">
                 <img
-                  src="images/cindrella strollers.jpeg"
-                  alt="Third Slide" />
-                <div class="carousel-caption">
-                  <h2>Stroller Passes</h2>
-                  <p>Want to make family memories? When having that much fun is
-                    just exhausting! SO, why not swap for stroller passes.
-                  </p>
-                </div>
+                  src="images/disneycastle.jpg"
+                  alt="fifth Slide" />
               </div>
+
+              <a class="left carousel-control" href="#carousel-example-generic"
+                role="button" data-slide="prev">
+                <span class="icon-prev" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+
+              <a class="right carousel-control" href="#carousel-example-generic"
+                role="button" data-slide="next">
+                <span class="icon-next" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-
-
-            <div class="carousel-item">
-              <img
-                src="images/mickyfun.jpg"
-                alt="Fouth Slide" />
-            </div>
-
-            <a class="left carousel-control" href="#carousel-example-generic"
-              role="button" data-slide="prev">
-              <span class="icon-prev" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-
-            <a class="right carousel-control" href="#carousel-example-generic"
-              role="button" data-slide="next">
-              <span class="icon-next" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
       </div>
-    </div>
 
-    <header>
-      <section class="header">
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-        </nav>
-      </section>
-      <footer>
+    </header>
+    <footer>
 
-      </footer>
-      <script>
+    </footer>
+    <script>
 	$('.carousel').carousel({
 		interval: 3000
 	})
 </script>
-    </html>
+  </body>
+</html>
