added some changes to pics

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   <body>
     <header>
+      <section class="header">
+        <h1>Disney Passes</h1>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+        </nav>
+      </section>
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -57,9 +64,7 @@
                     src="images/welcome sign disney.jpeg"
                     alt="First Slide" />
                 </div>
-                <div class="carousel-caption">
 
-                </div>
                 <div class="carousel-item">
                   <img
                     src="images/bluemicky.jpg"
@@ -87,18 +92,22 @@
                       just exhausting! SO, why not swap for stroller passes.
                     </p>
                   </div>
-                </div>
-              </div>
+
+
               <div class="carousel-item">
                 <img
-                  src="images/nighttimecastle.jpg"
+                  src="images/castle.jpg"
                   alt="Fouth Slide" />
               </div>
+          </div>
+
               <div class="carousel-item">
                 <img
                   src="images/disneycastle.jpg"
                   alt="fifth Slide" />
               </div>
+      </div>
+ </div>
 
               <a class="left carousel-control" href="#carousel-example-generic"
                 role="button" data-slide="prev">
