--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             <div id="carousel-example-generic" class="carousel slide"
               data-ride="carousel">
               <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0"
-                  class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
