--- a/about.html
+++ b/about.html
@@ -4,9 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>Disney Pass Team</title>
         <link rel="stylesheet" href="css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Domine|Inconsolata&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css?family=Domine|Inconsolata&display=swap"
+            rel="stylesheet">
     </head>
 
 
@@ -17,7 +19,7 @@
                 <a href="about.html">About</a>
             </nav>
         </section>
-        <h1></h1>
+        <h1>Meet My Team</h1>
         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -31,6 +33,93 @@
             anim id
             est laborum."</p>
     </header>
+    <h2>Giselle Hargrove</h2>
+    <h3>FRONT END II</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+    <h2>Carlos Santana</h2>
+    <h3>WEB BACKEND</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+    <h2>Davindar Singh</h2>
+    <h3>FRONT END I</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+    <h2>Bradley Yin </h2>
+    <h3>IOS DEVELOPER II</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+    <h2>Nathan Hedgeman</h2>
+    <h3>IOS ENGINEER</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+    <h2>Susan Trimnal</h2>
+    <h3>WEB UI I</h3>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id
+        est laborum."</p>
+
+
+
     <footer>
 
     </footer>
