tried screeshotting phtos see if that would work on making smaller worked a little and added extra photo done with index only need css

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
           <img src="images/welcome sign disney.jpeg" alt="header-img">
         </div>
       </header>
+      <div class="top-img">
+        <img src="images/castlenight.png" alt="top-img">
+      </div>
       <p>Wanting to go to Disney? Not sure if you want to hang with kids or have
         date day or date night? You can do both! Meet other parents that might
         want to do the same and swap your passes. Maybe you wanna take the
         children around and you have daycare passes.
         <div class="middle-img">
-          <img src="images/bluemicky.jpg" alt="middle-img">
+          <img src="images/mickyblue.png" alt="middle-img">
         </div>
         <p>You can see if someone wants to swap with you for stroller passes.
           Maybe you wanna do paret date ad
@@ -36,15 +39,16 @@
           are
           visiting the theme and arrange to swap there passes. </p>
         <div class="bottom-img">
-          <img src="images/bluebackground.jpg" alt="bottom-img">
+          <img src="images/blueback.png" alt="bottom-img">
         </div>
 
         <footer>
           <div class="footer-img">
-            <img src="images/disneycastle.jpg" alt="footer-img">
+            <img src="images/greatcastle.png" alt="footer-img">
           </div>
           <p>2019 Disney Passes</p>
         </footer>
+
       </div>
     </body>
   </html>
