got css working

--- a/html/about.html
+++ b/html/about.html
@@ -34,7 +34,7 @@
             est laborum."</p>
     </header>
     <h2>Giselle Hargrove</h2>
-    <img src="images/Giselle.png">
+    <img src="../images/Giselle.png">
     <h3>FRONT END II</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
@@ -49,7 +49,7 @@
         anim id
         est laborum."</p>
     <h2>Carlos Santana</h2>
-    <img src="images/Carlos.png">
+    <img src="../images/Carlos.png">
     <h3>WEB BACKEND</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
@@ -64,7 +64,7 @@
         anim id
         est laborum."</p>
     <h2>Davindar Singh</h2>
-    <img src="images/dav.png">
+    <img src="../images/dav.png">
     <h3>FRONT END I</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
@@ -79,7 +79,7 @@
         anim id
         est laborum."</p>
     <h2>Bradley Yin </h2>
-    <img src="images/bradley.png">
+    <img src="../images/bradley.png">
     <h3>IOS DEVELOPER II</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
@@ -94,8 +94,8 @@
         anim id
         est laborum."</p>
     <h2>Nathan Hedgeman</h2>
-    <img src="images/Nathan.png">
-    <<h3>IOS ENGINEER</h3>
+    <img src="../images/Nathan.png">
+    <h3>IOS ENGINEER</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -109,7 +109,7 @@
         anim id
         est laborum."</p>
     <h2>Susan Trimnal</h2>
-    <img src="images/susan.png">
+    <img src="../images/susan.png">
     <h3>WEB UI I</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
