added some styling

--- a/html/index.html
+++ b/html/index.html
@@ -4,23 +4,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Disney Parents</title>
     <link rel="stylesheet" href="../css/index.css"
 
   </head>
   <div class="container">
     <body>
       <header>
-        <h1>Disney Passes</h1>
+        <h1>Disney Parents</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
         </nav>
-
-        <div class="header-img">
-          <img src="../images/welcome sign disney.jpeg" alt="header-img">
-        </div>
       </header>
+      <div class="header-img">
+        <img src="../images/welcome sign disney.jpeg" alt="header-img">
+      </div>
+
       <div class="top-img">
         <img src="../images/castlenight.png" alt="top-img">
       </div>
