got colors added and footer fixed with pictures center and header fixed.

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disney Parents</title>
-    <link rel="stylesheet" href="../css/index.css"
+    <link rel="stylesheet" href="../css/index.css">
 
   </head>
   <div class="container">
@@ -38,14 +38,10 @@
           passes. This app will let you do that. You can meet other parents that
           are
           visiting the theme and arrange to swap there passes. </p>
-        <div class="bottom-img">
-          <img src="../images/blueback.png" alt="bottom-img">
-        </div>
-
-        <footer>
-          <div class="footer-img">
+<div class="footer-img">
             <img src="../images/greatcastle.png" alt="footer-img">
           </div>
+        <footer>
           <p>2019 Disney Passes</p>
         </footer>
 
