--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <div class="container">
-    <body>
+    <bodd<div>
       <header>
         <h1>Disney Parents</h1>
         <nav>
@@ -20,7 +20,10 @@
       <div class="header-img">
         <img src="../images/welcome sign disney.jpeg" alt="header-img">
       </div>
-
+      <div class="button">
+        <a href="#">Sign In</a>
+        <a href="#">Sign up</a>
+      </div>
       <div class="top-img">
         <img src="../images/castlenight.png" alt="top-img">
       </div>
@@ -38,9 +41,9 @@
           passes. This app will let you do that. You can meet other parents that
           are
           visiting the theme and arrange to swap there passes. </p>
-<div class="footer-img">
-            <img src="../images/greatcastle.png" alt="footer-img">
-          </div>
+        <div class="footer-img">
+          <img src="../images/greatcastle.png" alt="footer-img">
+        </div>
         <footer>
           <p>2019 Disney Passes</p>
         </footer>
