--- a/html/about.html
+++ b/html/about.html
@@ -5,49 +5,35 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Disney Pass Team</title>
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="../css/index.css">
         <link
             href="https://fonts.googleapis.com/css?family=Domine|Inconsolata&display=swap"
             rel="stylesheet">
     </head>
-
+<div class="container">
 
     <header>
-        <section class="header">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-            </nav>
-        </section>
-        <h1>Meet My Team</h1>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea
-            commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id
-            est laborum."</p>
+        <h1>Disney Parents Team</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+        </nav>
     </header>
+    <div class="aboutsection">
+        <h2>Meet My Team</h2>
+        <p>This app is about disney passes. Childcare passes and Stroller
+            passes. Being able to switch them between parents and build a
+            community while visiting at Disney Parks. This is the team that
+            worked hard on building the app whether you are visiing on ios or
+            website. I have included a little about them and links so maybe you
+            will want to check out some more of there work. </p>
+    </div>
+
     <h2>Giselle Hargrove</h2>
     <img src="../images/Giselle.png">
     <h3>FRONT END II</h3>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-        ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in
-        voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit
-        anim id
-        est laborum."</p>
+    <p>"A United States veteran, paralegal, aspiring to become a software
+        engineer. I love the thrill and seeking adventures with my family."</p>
     <h2>Carlos Santana</h2>
     <img src="../images/Carlos.png">
     <h3>WEB BACKEND</h3>
@@ -66,18 +52,8 @@
     <h2>Davindar Singh</h2>
     <img src="../images/dav.png">
     <h3>FRONT END I</h3>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-        ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in
-        voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat
-        cupidatat non proident, sunt in culpa qui officia deserunt mollit
-        anim id
-        est laborum."</p>
+    <p>"Description: Full stack web developer, based in the UK. Hoping to become
+        a faster coder over the coming months"</p>
     <h2>Bradley Yin </h2>
     <img src="../images/bradley.png">
     <h3>IOS DEVELOPER II</h3>
@@ -127,6 +103,8 @@
 
 
     <footer>
-
+<p>2019 Disney Passes</p>
     </footer>
+    </div>
+      </body>
 </html>
