made some changes

--- a/html/about.html
+++ b/html/about.html
@@ -25,8 +25,7 @@
             passes. Being able to switch them between parents and build a
             community while visiting at Disney Parks. This is the team that
             worked hard on building the app whether you are visiing on ios or
-            website. I have included a little about them and links so maybe you
-            will want to check out some more of there work. </p>
+            website. I have included a little about them.</p>
     </div>
 
     <h2>Giselle Hargrove</h2>
@@ -72,6 +71,7 @@
     <h2>Nathan Hedgeman</h2>
     <img src="../images/Nathan.png">
     <h3>IOS ENGINEER</h3>
+
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
